typos in Q2 (AM-GM should be AM-HM)

--- a/hw/hw2/hw2.html
+++ b/hw/hw2/hw2.html
@@ -3134,7 +3134,7 @@ return!"\t\n\x0B\f\r                　\u2028\u2029
    
   <ul>
   <li><a href="#q1.-average-and-norm" id="toc-q1.-average-and-norm" class="nav-link active" data-scroll-target="#q1.-average-and-norm"><span class="header-section-number">1</span> Q1. Average and norm</a></li>
-  <li><a href="#q2.-am-gm-inequality" id="toc-q2.-am-gm-inequality" class="nav-link" data-scroll-target="#q2.-am-gm-inequality"><span class="header-section-number">2</span> Q2. AM-GM inequality</a></li>
+  <li><a href="#q2.-am-hm-inequality" id="toc-q2.-am-hm-inequality" class="nav-link" data-scroll-target="#q2.-am-hm-inequality"><span class="header-section-number">2</span> Q2. AM-HM inequality</a></li>
   <li><a href="#q3.-sub-multiplicity-for-matrix-norm" id="toc-q3.-sub-multiplicity-for-matrix-norm" class="nav-link" data-scroll-target="#q3.-sub-multiplicity-for-matrix-norm"><span class="header-section-number">3</span> Q3. Sub-multiplicity for matrix norm</a></li>
   <li><a href="#q4.-k-means-clustering" id="toc-q4.-k-means-clustering" class="nav-link" data-scroll-target="#q4.-k-means-clustering"><span class="header-section-number">4</span> Q4. <span class="math inline">\(k\)</span>-means clustering</a></li>
   <li><a href="#bv-exercises" id="toc-bv-exercises" class="nav-link" data-scroll-target="#bv-exercises"><span class="header-section-number">5</span> BV exercises</a></li>
@@ -3171,12 +3171,12 @@ return!"\t\n\x0B\f\r                　\u2028\u2029
 \]</span> for any <span class="math inline">\(\mathbf{x} \in \mathbb{R}^n\)</span>. In other words, <span class="math inline">\(-\operatorname{rms}(\mathbf{x}) \le \operatorname{avg}(\mathbf{x}) \le \operatorname{rms}(\mathbf{x})\)</span>.</p>
 <p>What are the conditions on <span class="math inline">\(\mathbf{x}\)</span> to have equality in the upper bound? When do we have equality in the lower bound?</p>
 </section>
-<section id="q2.-am-gm-inequality" class="level2" data-number="2">
-<h2 data-number="2" class="anchored" data-anchor-id="q2.-am-gm-inequality"><span class="header-section-number">2</span> Q2. AM-GM inequality</h2>
+<section id="q2.-am-hm-inequality" class="level2" data-number="2">
+<h2 data-number="2" class="anchored" data-anchor-id="q2.-am-hm-inequality"><span class="header-section-number">2</span> Q2. AM-HM inequality</h2>
 <p>Use the Cauchy-Schwartz inequality to prove that <span class="math display">\[
 \frac{1}{n} \sum_{i=1}^n x_i \ge \left( \frac{1}{n} \sum_{i=1}^n \frac{1}{x_i} \right)^{-1}
 \]</span> for any <span class="math inline">\(\mathbf{x} \in \mathbb{R}^n\)</span> with positive entries <span class="math inline">\(x_i\)</span>.</p>
-<p>The left hand side is called the arithmetic mean (AM) and the right hand side is called the geometric mean (GM). You may wonder what can be a practical use of such a simple inequality. See this <a href="http://hua-zhou.github.io/media/pdf/LangeZhou14GP.pdf">paper</a>, which uses the AM-GM inequality to derive a class of optimization algorithms for geometric and signomial programming.</p>
+<p>The left hand side is called the arithmetic mean (AM) and the right hand side is called the harmonic mean (HM). You may wonder what can be a practical use of such a simple inequality. See this <a href="http://hua-zhou.github.io/media/pdf/LangeZhou14GP.pdf">paper</a>, which uses the AM-GM inequality to derive a class of optimization algorithms for geometric and signomial programming.</p>
 </section>
 <section id="q3.-sub-multiplicity-for-matrix-norm" class="level2" data-number="3">
 <h2 data-number="3" class="anchored" data-anchor-id="q3.-sub-multiplicity-for-matrix-norm"><span class="header-section-number">3</span> Q3. Sub-multiplicity for matrix norm</h2>
