--- a/slides/06-orthproj/06-orthproj.html
+++ b/slides/06-orthproj/06-orthproj.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Dr. Hua Zhou @ UCLA">
-<meta name="dcterms.date" content="2023-10-31">
+<meta name="dcterms.date" content="2023-11-02">
 
 <title>Orthogonal Projections</title>
 <style>
@@ -3139,7 +3139,7 @@ return!"\t\n\x0B\f\r                　\u2028\u2029
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">October 31, 2023</p>
+      <p class="date">November 2, 2023</p>
     </div>
   </div>
   
@@ -3307,7 +3307,7 @@ Proof of 4: Follows from essential disjointness between <span class="math inline
 <li><p>If <span class="math inline">\(\mathbf{X}\)</span> has full column rank, then the orthogonal projector into <span class="math inline">\(\mathcal{C}(\mathbf{X})\)</span> is given by <span class="math display">\[
 \mathbf{P}_{\mathbf{X}} = \mathbf{X} (\mathbf{X}&#39; \mathbf{X})^{-1} \mathbf{X}&#39;.
 \]</span></p>
-<p>Proof of 1: Since the orthogonal projection of <span class="math inline">\(\mathbf{y}\)</span> into <span class="math inline">\(\mathcal{C}(\mathbf{X})\)</span> lives in <span class="math inline">\(\mathcal{C}(\mathbf{X})\)</span>, thus can be written as <span class="math inline">\(\mathbf{u} = \mathbf{X} \boldsymbol{\beta}\)</span> for some <span class="math inline">\(\boldsymbol{\beta} \in \mathbb{R}^p\)</span>. Furthermore, <span class="math inline">\(\mathbf{v} = \mathbf{y} - \mathbf{X} \boldsymbol{\beta} \in \mathcal{C}(\mathbf{X})^\perp\)</span> is orthogonal to any vectors in <span class="math inline">\(\mathcal{C}(\mathbf{X})\)</span> including the columns of <span class="math inline">\(\mathbf{X}\)</span>. Thus <span class="math display">\[
+<p>Proof of 1: Since the orthogonal projection of <span class="math inline">\(\mathbf{y}\)</span> into <span class="math inline">\(\mathcal{C}(\mathbf{X})\)</span> lives in <span class="math inline">\(\mathcal{C}(\mathbf{X})\)</span>, thus can be written as <span class="math inline">\(\mathbf{X} \boldsymbol{\beta}\)</span> for some <span class="math inline">\(\boldsymbol{\beta} \in \mathbb{R}^p\)</span>. Furthermore, <span class="math inline">\(\mathbf{y} - \mathbf{X} \boldsymbol{\beta} \in \mathcal{C}(\mathbf{X})^\perp\)</span> is orthogonal to any vectors in <span class="math inline">\(\mathcal{C}(\mathbf{X})\)</span> including the columns of <span class="math inline">\(\mathbf{X}\)</span>. Thus <span class="math display">\[
 \mathbf{X}&#39; (\mathbf{y} - \mathbf{X} \boldsymbol{\beta}) = \mathbf{0},
 \]</span> or equivalently, <span class="math display">\[
 \mathbf{X}&#39; \mathbf{X} \boldsymbol{\beta} = \mathbf{X}&#39; \mathbf{y}.
